--- a/source/sass/scaffolding.scss
+++ b/source/sass/scaffolding.scss
@@ -9,7 +9,7 @@ body {
   color: $text-color;
   font-style: normal;
 
-  background-color: $background-color-main;
+  background-color: $blue--dark;
 }
 
 img {
