--- a/source/sass/blocks/competition.scss
+++ b/source/sass/blocks/competition.scss
@@ -1,3 +1,7 @@
+.competition {
+  background-color: $background-color-main;
+}
+
 .competition__slogan {
   font-family: $default-font;
   font-weight: normal;
@@ -20,7 +24,7 @@
 
 @media (min-width: $tablet-width) {
   .competition__wrapper {
-    margin-top: 37px;
+    padding-top: 69px;
   }
 
   .competition__form {
