--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -8,12 +8,17 @@
   background-color: $background-color-intro;
   background-image: url("../img/bg-back-mobile@1x.jpg");
   background-repeat: no-repeat;
-  background-position: center calc(100% - 270px);
+  background-position: 0 0;
   background-size: 100%;
+
+  &--index-page {
+    background-position: center calc(100% - 270px);
+  }
 
   @media (min-resolution: $retina-dppx), (min-resolution: $retina-dpi) {
     background-image: url("../img/bg-back-mobile@2x.jpg");
     background-size: 101%;
+    background-position: 0 -3px;
   }
 }
 
